fix(docs): Alerts should only word break on mobile nav

--- a/docs/assets/css/fluid.css
+++ b/docs/assets/css/fluid.css
@@ -240,6 +240,8 @@ where bootstrap caption color is too light for white background */
  Long words such as function names would not break in api docs causing layout overflow
 */
 
-.table td:nth-child(2) {
-	word-break: break-word;
+@media only screen and (max-width: 600px) {
+	.table td:nth-child(2) {
+		word-break: break-word;
+	}
 }
